--- a/css/style.css
+++ b/css/style.css
@@ -209,3 +209,27 @@ footer .button-box a{
 footer .button-box a:first-child{
     margin-left:0;
 }
+
+footer .contact-title{
+    position: relative;
+    z-index:10;
+    cursor:pointer;
+}
+footer .contact-hidden--box{
+    position:absolute;
+    top:35px;
+    left:0;
+    background:#fff;
+    padding:15px;
+    display:none;
+    width:200px;
+    font-weight: 600;
+    color:#3e3e3e;
+}
+footer .contact-hidden--box li{
+    padding:10px 0;
+}
+footer .contact-hidden--box li:hover{
+    cursor:pointer;
+    text-decoration: underline;
+}
